--- a/T/T2.ipynb
+++ b/T/T2.ipynb
@@ -623,7 +623,7 @@
         "start_colab = float(open('/home/studio-lab-user/content/sdw/static/colabTimer.txt', 'r').read())\n",
         "time_since_start = str(timedelta(seconds=time.time()-start_colab)).split('.')[0]\n",
         "print(f\"\\n⌚️ \\033[96;1mTotal Waktu yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")"
-        "%cd /home/studio-lab-user/T/T\n"
+        "%cd /home/studio-lab-user/T/T\n",
       ]
     }
   ]
