--- a/T/T2.ipynb
+++ b/T/T2.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPSdw5JzVk/aGgbwPyxFNTh"
     },
     "kernelspec": {
       "name": "python3",
@@ -622,7 +623,8 @@
         "\n",
         "start_colab = float(open('/home/studio-lab-user/content/sdw/static/colabTimer.txt', 'r').read())\n",
         "time_since_start = str(timedelta(seconds=time.time()-start_colab)).split('.')[0]\n",
-        "print(f\"\\n⌚️ \\033[96;1mTotal Waktu yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")"
+        "print(f\"\\n⌚️ \\033[96;1mTotal Waktu yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n",
+        "%cd /home/studio-lab-user/T/T"
       ]
     }
   ]
