Dibuat menggunakan Colaboratory

--- a/T3.ipynb
+++ b/T3.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPFHsY/0+TtT45DO7508/zo",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,12 +17,17 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "2g7t-uDgdGy7"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [],
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vorstcavry/T/blob/main/T3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# membuat symlink ke folder sementara\n",
         "print(\"\\n\\033[92m➤ Mempersiapkan folder 🗑️\\033[97m\")\n",
@@ -49,7 +56,7 @@
         "from subprocess import getoutput\n",
         "\n",
         "def load_settings():\n",
-        "    SETTINGS_FILE = '/home/studio-lab-user/content/settings_vorstcavry.json'\n",
+        "    SETTINGS_FILE = '/home/studio-lab-user/content/settings_vorst_cavry.json'\n",
         "    if os.path.exists(SETTINGS_FILE):\n",
         "        with open(SETTINGS_FILE, 'r') as f:\n",
         "            settings = json.load(f)\n",
@@ -88,8 +95,14 @@
         "\n",
         "    start_colab = float(open('/home/studio-lab-user/content/sdw/static/colabTimer.txt', 'r').read())\n",
         "    time_since_start = str(timedelta(seconds=time.time()-start_colab)).split('.')[0]\n",
-        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")"
-      ]
+        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "Baiz2hJjjUxQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
