Dibuat menggunakan Colaboratory

--- a/T2.ipynb
+++ b/T2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt7hXO2SBajwR76hrOAW7O",
+      "authorship_tag": "ABX9TyM9+2He627xxLSku2nOZsP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -550,7 +550,7 @@
         "    !mkdir -p /tmp/VAE\n",
         "    del c\n",
         "clear_output()\n",
-        "mostrar_en_div_estilizado(f\"<h1>🥶 SILAHKAN LANJUUUUUT KE PROSES TERAKHIR!!!!</h1><hr>🌍Proses: 100% - Jalankan Proses ke 3 untuk menghasilkan Link Stable Diffusion\")\n"
+        "mostrar_en_div_estilizado(f\"<h1>🥶 Mempersiapkan Link!!!!</h1><hr>🌍Proses: 100% - Mulai menjalankan web stable diffusion\")\n"
       ]
     }
   ]
