Dibuat menggunakan Colaboratory

--- a/T1.ipynb
+++ b/T1.ipynb
@@ -4,12 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "W5vwK1KfbKS8",
-        "8PHOENe2bU65",
-        "MgHG0UcpbfQx"
-      ],
-      "authorship_tag": "ABX9TyMotJKcCg35MznaP42FZXH+",
+      "authorship_tag": "ABX9TyNdM0pVYPo3fCJlqnPDapd3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2600,7 +2595,7 @@
         "# Loading Screen Code\n",
         "LSC = \"\"\"\n",
         "<div id=\"loading-screen\" style=\"display: flex; align-items: center; justify-content: center; position: fixed; top: 0; left: 0; z-index: 9999; width: 85vw; height: 100vh; background-color: rgba(0,0,0,0.55); backdrop-filter: blur(5px) grayscale(1); pointer-events: none; opacity: 0; transition: opacity 0.5s;\">\n",
-        "    <p style=\"text-align: center; font-family: arial; font-size: 65px; color: white;\">Loading...</p>\n",
+        "    <p style=\"text-align: center; font-family: arial; font-size: 65px; color: white;\">REMAJA PEKALONGAN</p>\n",
         "</div>\n",
         "\n",
         "<script>\n",
