--- a/T3.ipynb
+++ b/T3.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPFHsY/0+TtT45DO7508/zo",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vorstcavry/T/blob/main/T3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Baiz2hJjjUxQ"
+      },
+      "outputs": [],
       "source": [
         "# membuat symlink ke folder sementara\n",
         "print(\"\\n\\033[92m➤ Mempersiapkan folder 🗑️\\033[97m\")\n",
@@ -64,6 +53,7 @@
         "\n",
         "settings = load_settings()\n",
         "ngrok_token = settings['ngrok_token']\n",
+        "optional_huggingface_token = settings['optional_huggingface_token']\n",
         "commandline_arguments = settings['commandline_arguments']\n",
         "\n",
         "output = getoutput('nvidia-smi --query-gpu=gpu_name --format=csv')\n",
@@ -82,6 +72,11 @@
         "    os.remove(\"/home/studio-lab-user/content/sdw/static/colabTimer.txt\")\n",
         "!echo -n {start_colab} > /home/studio-lab-user/content/sdw/static/colabTimer.txt\n",
         "\n",
+        "if not optional_huggingface_token:\n",
+        "    print(\"Kamu tidak Menggunakan Fitur Huggingface Galery, masukan Token huggingface untuk menggunakan fitur huggingface galery: https://huggingface.co/settings/tokens \")\n",
+        "else:\n",
+        "    commandline_arguments+=' --hf-token-out '+optional_huggingface_token\n",
+        "\n",
         "# =============== LAUNCH ===============\n",
         "if not ngrok_token:\n",
         "    print(\"Anda belum memasukkan token ngrok!, kembali ke bagian `Widget` dan masukkan token Anda. Anda bisa mendapatkannya di sini : https://dashboard.ngrok.com/get-started/your-authtoken\")\n",
@@ -95,14 +90,24 @@
         "\n",
         "    start_colab = float(open('/home/studio-lab-user/content/sdw/static/colabTimer.txt', 'r').read())\n",
         "    time_since_start = str(timedelta(seconds=time.time()-start_colab)).split('.')[0]\n",
-        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n",
-        ""
-      ],
-      "metadata": {
-        "id": "Baiz2hJjjUxQ"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPFHsY/0+TtT45DO7508/zo",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
