--- a/T3.ipynb
+++ b/T3.ipynb
@@ -1,33 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPFHsY/0+TtT45DO7508/zo",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/vorstcavry/T/blob/main/T3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Baiz2hJjjUxQ"
+      },
+      "outputs": [],
       "source": [
         "# membuat symlink ke folder sementara\n",
         "print(\"\\n\\033[92m➤ Mempersiapkan folder 🗑️\\033[97m\")\n",
@@ -63,6 +42,7 @@
         "        return settings\n",
         "\n",
         "settings = load_settings()\n",
+        "optional_huggingface_token = settings['optional_huggingface_token']\n",
         "ngrok_token = settings['ngrok_token']\n",
         "commandline_arguments = settings['commandline_arguments']\n",
         "\n",
@@ -83,9 +63,18 @@
         "!echo -n {start_colab} > /home/studio-lab-user/content/sdw/static/colabTimer.txt\n",
         "\n",
         "# =============== LAUNCH ===============\n",
+        "if not optional_huggingface_token:\n",
+        "    print(\"Anda belum memasukkan token Huggingface!, kembali ke bagian `Widget` dan masukkan token Anda. Anda bisa mendapatkannya di sini : https://huggingface.co/settings/tokens\")\n",
+        "else:\n",
+        "    commandline_arguments+=\" --hf-token-out \"+optional_huggingface_token\n",
+        "\n",
         "if not ngrok_token:\n",
         "    print(\"Anda belum memasukkan token ngrok!, kembali ke bagian `Widget` dan masukkan token Anda. Anda bisa mendapatkannya di sini : https://dashboard.ngrok.com/get-started/your-authtoken\")\n",
+        "    commandline_arguments += ' --ngrok ' + ngrok_token\n",
+        "    commandline_arguments = commandline_arguments.replace(\"--share\",\"\").replace(\"--multiple\",\"\")\n",
         "\n",
+        "    %cd /home/studio-lab-user/content/sdw\n",
+        "    !COMMANDLINE_ARGS=\"{commandline_arguments}\" python launch.py\n",
         "else:\n",
         "    commandline_arguments += ' --ngrok ' + ngrok_token\n",
         "    commandline_arguments = commandline_arguments.replace(\"--share\",\"\").replace(\"--multiple\",\"\")\n",
@@ -95,14 +84,22 @@
         "\n",
         "    start_colab = float(open('/home/studio-lab-user/content/sdw/static/colabTimer.txt', 'r').read())\n",
         "    time_since_start = str(timedelta(seconds=time.time()-start_colab)).split('.')[0]\n",
-        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n",
-        ""
-      ],
-      "metadata": {
-        "id": "Baiz2hJjjUxQ"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    print(f\"\\n⌚️ \\033[96;1mWAKTU yang terpakai -  \\033[93;2m{time_since_start}\\033[96m\\n\\n\")\n"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
